Add terraforming and probe deployment to acs-stage-eu-01.

--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -29,13 +29,20 @@ jobs:
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github
-      - name: Run terraforming on THE stage cluster
+      - name: Run terraforming on acs-stage-dp-02
         working-directory: ./dp-terraform/helm/rhacs-terraform
         env:
           AWS_AUTH_HELPER: none # credentials are populated by the above action
         run: |
           set -euo pipefail
           ./terraform_cluster.sh stage acs-stage-dp-02
+      - name: Run terraforming on acs-stage-eu-01
+        working-directory: ./dp-terraform/helm/rhacs-terraform
+        env:
+          AWS_AUTH_HELPER: none # credentials are populated by the above action
+        run: |
+          set -euo pipefail
+          ./terraform_cluster.sh stage acs-stage-eu-01
 
   deploy-probe:
     name: Deploy blackbox monitoring probe service to stage
@@ -58,10 +65,17 @@ jobs:
         with:
           aws-region: ${{ secrets.AWS_REGION }}
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github
-      - name: Deploy probe
+      - name: Deploy probe on acs-stage-dp-02
         working-directory: ./deploy/helm/probe
         env:
           AWS_AUTH_HELPER: none # credentials are populated by the above action
         run: |
           set -euo pipefail
           ./deploy.sh stage acs-stage-dp-02
+      - name: Deploy probe on acs-stage-eu-01
+        working-directory: ./deploy/helm/probe
+        env:
+          AWS_AUTH_HELPER: none # credentials are populated by the above action
+        run: |
+          set -euo pipefail
+          ./deploy.sh stage acs-stage-eu-01
