match on `rhacs` and `strimzi`

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-06-cr.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/templates/01-operator-06-cr.yaml
@@ -17,11 +17,19 @@ spec:
     # ourselves via the logging sub-chart.
     disableLogging: true
     podMonitorLabelSelector:
-      matchLabels:
-        app: rhacs
+      matchExpressions:
+        - key: app
+          operator: In
+          values:
+            - rhacs
+            - strimzi
     serviceMonitorLabelSelector:
-      matchLabels:
-        app: rhacs
+      matchExpressions:
+        - key: app
+          operator: In
+          values:
+            - rhacs
+            - strimzi
   storage:
     prometheus:
       volumeClaimTemplate:
