expose instance type as label on Central pod
The label will be scraped by Prometheus as a source for dashboards.

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -290,6 +290,9 @@ components:
                 central:
                   type: object
                   properties:
+                    instanceType:
+                      type: string
+                      enum: [eval, standard]
                     resources:
                       $ref: "#/components/schemas/ResourceRequirements"
                 scanner:
