Set request and limit CPU to 2

--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -17,6 +17,13 @@ spec:
   source: {{ .Values.acsOperator.source }}
   sourceNamespace: {{ .Values.acsOperator.sourceNamespace }}
   startingCSV: rhacs-operator.{{ .Values.acsOperator.version }}
+  config:
+    resources:
+      requests:
+        cpu: 2
+      limits:
+        cpu: 2
+
 ---
 {{- if .Values.acsOperator.upstream }}
 apiVersion: operators.coreos.com/v1alpha1
