--- a/dev/env/manifests/shared/03-configmap-config.yaml
+++ b/dev/env/manifests/shared/03-configmap-config.yaml
@@ -7,6 +7,7 @@ data:
         cluster_id: "$CLUSTER_ID"
         cloud_provider: standalone
         region: standalone
+        multi_az: true
         schedulable: true
         status: ready
         provider_type: standalone
